# server/routes/userRoutes.js
@@ -1,22 +1,22 @@
-const express = require('express')
-const router = express.Router()
-const userController = require('../controllers/userController')
-const tokenValidation = require('../middleware/tokenValidation')
+const express = require("express");
+const router = express.Router();
+const userController = require("../controllers/userController");
+const tokenValidation = require("../middleware/tokenValidation");
 
-router.post('/signup', userController.createUser)
+router.post("/signup", userController.createUser);
 
-router.post('/login', userController.loginUser)
+router.post("/login", userController.loginUser);
 
 router.get(
-  '/profile',
+  "/profile",
   tokenValidation.validateToken,
   userController.getUserProfile
-)
+);
 
 router.put(
-  '/profile',
+  "/profile",
   tokenValidation.validateToken,
   userController.updateUserProfile
-)
+);
 
-module.exports = router
+module.exports = router;
