# server/server.js
@@ -1,38 +1,44 @@
-const express = require('express')
-const dotEnv = require('dotenv')
-const cors = require('cors')
-const swaggerUi = require('swagger-ui-express')
-const yaml = require('yamljs')
-const swaggerDocs = yaml.load('./swagger.yaml')
-const dbConnection = require('./database/connection')
+const express = require("express");
+const dotEnv = require("dotenv");
+const cors = require("cors");
+const swaggerUi = require("swagger-ui-express");
+const yaml = require("yamljs");
+const swaggerDocs = yaml.load("./swagger.yaml");
+const dbConnection = require("./database/connection");
+const accountRoutes = require("./routes/accountRoutes");
+const bodyParser = require("body-parser");
 
-dotEnv.config()
+dotEnv.config();
 
-const app = express()
-const PORT = process.env.PORT || 3001
+const app = express();
+app.use(bodyParser.json());
+const PORT = process.env.PORT || 3001;
 
 // Connect to the database
-dbConnection()
+dbConnection();
 
 // Handle CORS issues
-app.use(cors())
+app.use(cors());
 
 // Request payload middleware
-app.use(express.json())
-app.use(express.urlencoded({ extended: true }))
+app.use(express.json());
+app.use(express.urlencoded({ extended: true }));
 
 // Handle custom routes
-app.use('/api/v1/user', require('./routes/userRoutes'))
+app.use("/api/v1/user", require("./routes/userRoutes"));
+// app.use("/api/v1", accountRoutes);
+app.use("/api/v1/accounts", accountRoutes);
 
 // API Documentation
-if (process.env.NODE_ENV !== 'production') {
-  app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocs))
+if (process.env.NODE_ENV !== "production") {
+  app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocs));
 }
 
-app.get('/', (req, res, next) => {
-  res.send('Hello from my Express server v2!')
-})
+app.get("/", (req, res) => {
+  res.send("Hello from my Express server v2!");
+});
 
+// Listen to the server
 app.listen(PORT, () => {
-  console.log(`Server listening on http://localhost:${PORT}`)
-})
+  console.log(`Server listening on http://localhost:${PORT}`);
+});
